--- a/css/styles.css
+++ b/css/styles.css
@@ -144,14 +144,14 @@ header .container {
     width: 16px;
     height: 12px;
     margin-right: 10px;
-    fill: var(--link-address-color);
+    fill: currentColor;
 }
 
 .phone-icon {
     width: 10px;
     height: 16px;
     margin-right: 10px;
-    fill: var(--link-address-color);
+    fill: currentColor;
 }
 
 .mail-icon:hover,
@@ -181,6 +181,7 @@ header .container {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-section-image.jpg);
     background-color: var(--background-color-image);
     background-size: cover;
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     text-align: center;
@@ -492,12 +493,17 @@ header .container {
     text-transform: uppercase;
 }
 
-.footer-left-part {
+.footer-container {
+    display: flex;
+    align-items: center;
+}
+
+/* .footer-left-part {
     display: flex;
 }
 
 .footer-right-part {
     display:flex;
-}
+} */
 
 /* END footer */
