--- a/css/styles.css
+++ b/css/styles.css
@@ -417,8 +417,10 @@ header .container {
 .clients-company {
     width: 170px;
     height: 92px;
-    border: 1px solid var(--social-network-color);
-    border-radius: 4px;
+}
+
+.clients-company:not(:last-child) {
+    margin-right: 30px;
 }
 
 .client-icon:hover,
@@ -426,15 +428,19 @@ header .container {
     fill: var(--link-color);
 }
 
-
 .link-company {
     display: flex;
-    width: 170px;
-    height: 92px;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    margin-right: 32px;
-    margin-left: 32px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--social-network-color);
+    border-radius: 4px;
+}
+
+.link-company:hover,
+.link-company:focus {
+    border: 1px solid var(--link-color);
 }
 
 /* END index.html */
@@ -454,6 +460,7 @@ header .container {
     padding-right: 22px;
     padding-bottom: 6px;
     padding-left: 22px;
+    cursor: pointer;
 }
 
 .button-item:not(:last-child) {
@@ -464,7 +471,6 @@ header .container {
 .filter-button:focus {
     color: var(--primary-background-color);
     background-color: var(--link-color);
-    cursor: pointer;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -480,8 +486,12 @@ header .container {
     margin-bottom: 30px;
 }
 
-.card-project:hover,
-.card-project:focus {
+.link-project {
+    display: block;
+}
+
+.link-project:hover,
+.link-project:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
